# langbot-plugin-sdk

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  README_CN.md  README_zh.md  mypy.ini  pyproject.toml
.github/workflows/: test.yml
docs/: PluginPages.md  README.md  cli-reference.md  dependency-management.md  installation.md  quick-start.md
docs/agent-runner-pluginization/: CONTEXT_PARAMS_STATE.md  PHASE0_INTEGRATION_LOG.md  PROTOCOL_V1.md  README.md  SDK_RUNTIME_PLAN.md
docs/api-reference/: event-api.md  langbot-api.md  llm-api.md  message-api.md  storage-api.md
docs/apis/: lb2rt.md
docs/development/: README.md  best-practices.md  setup.md
docs/examples/: README.md  basic-plugin.md
scripts/: check_action_consistency.py
src/langbot_plugin/: version.py
tests/: test_log.py  test_message.py  test_plugin_logbuffer.py
tests/api/: test_agent_tools_mcp_bridge.py
tests/box/: test_backend.py  test_backend_selection.py  test_client.py  test_e2b_backend.py  test_nsjail_backend.py  test_runtime.py  test_server.py  test_skill_store.py
tests/cli/: test_buildplugin.py  test_gencomponent.py  test_i18n_form.py  test_initplugin.py  test_login.py  test_logout_publish.py  test_page_components.py  test_renderer.py  test_runplugin.py
tests/e2e/: standalone_runtime_eba_probe.py
tests/helpers/: protocol.py
tests/packaging/: test_installed_cli_blackbox.py
tests/remote/: test_agent_runner_daemon.py
tests/runtime/: __init__.py  test_app.py  test_depsmgr.py  test_pull_api_handlers.py
tests/utils/: test_deadline.py  test_discovery.py  test_importutil.py  (+1 more)
(+247 files in other folders)
