[project]
name = "langbot-plugin"
version = "0.4.2b4"
description = "This package contains the SDK, CLI for building plugins for LangBot, plus the runtime for hosting LangBot plugins"
readme = "README.md"
authors = [
    { name = "Junyan Qin", email = "rockchinq@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.9.0",
    "dotenv>=0.9.9",
    "e2b>=2.15",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "packaging>=24.0",
    "pip>=25.2",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.0",
    "pyyaml>=6.0.2",
    "textual>=3.2.0",
    "types-aiofiles>=24.1.0.20250516",
    "types-pyyaml>=6.0.12.20250516",
    "watchdog>=6.0.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.11.12",
]

[project.scripts]
lbp = "langbot_plugin.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://langbot.app"
Repository = "https://github.com/langbot-app/langbot-plugin-sdk"
Issues = "https://github.com/langbot-app/langbot-plugin-sdk/issues"

[tool.setuptools]
package-data = { "langbot_plugin" = ["assets/templates/*", "assets/*.js"] }

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["langbot_plugin"]

[tool.coverage.report]
show_missing = true
skip_covered = true
